frontend-deployment.yaml
#doubt in value
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kumarshubham16/devops-fe:latest
        ports:
        - containerPort: 3000
