be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: kumarshubham16/devops-be:latest
        ports:
        - containerPort: 4400
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4400
      targetPort: 4400
  type: LoadBalancer
