fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web-app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: kumarshubham16/devops-fe:2.5
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          # limits:
          #   memory: "1Gi"
          #   cpu: "1Gi"
        ports:
        - containerPort: 3000
        
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-app-service
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
