ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shshinfo.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-web-app-service
            port:
              number: 3000
      - path: /backend
        pathType: Exact
        backend:
          service:
            name: backend-api-service
            port:
              number: 4400
